--- a/styles/app.css
+++ b/styles/app.css
@@ -5,10 +5,14 @@
   border-radius: 5px;
   height: 140px;
   margin-right: 20px;
+  text-indent: -9999px;
+  overflow: hidden;
+  background-size: 100%;
 }
 
 .covered {
   background-color: black;
+  background-image: url("../img/card-back.png");
 }
 
 .hand {
