Fixed game logic error where player loses even if dealer busts, and replaced endgame alerts with endgame function

--- a/styles/app.css
+++ b/styles/app.css
@@ -18,3 +18,14 @@
 .hand {
   overflow: auto;
 }
+
+.game-status {
+  visibility: hidden;
+}
+
+button {
+  margin-top: 20px;
+}
+.new-game {
+  visibility: hidden;
+}
