--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,32 @@
+body {
+  position: relative;
+  background-color: rgb(30,120,50);
+  /*background-image: url('../img/bg-felt.jpg');*/
+  backgoun
+}
+
+nav.navbar {
+  text-align: center;
+  color: white;
+  background-color: rgba(0,0,0,0.5);
+  border: none;
+  border-radius: 0;
+  padding-bottom: 10px;
+}
+
+nav.navbar h1 {
+  font-size: 30px;
+}
+
+nav.navbar h3 {
+  font-size: 15px;
+}
+
+.container {
+  width: 800px;
+  margin: 0 auto 0;
+  
+}
 .card {
   float: left;
   border: solid 1px black;
@@ -8,6 +37,7 @@
   text-indent: -9999px;
   overflow: hidden;
   background-size: 100%;
+  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 1);
 }
 
 .covered {
@@ -17,14 +47,30 @@
 
 .hand {
   overflow: auto;
+  padding-bottom: 10px;
+}
+.hand h3 {
+  font-weight: normal;
+  color: white;
+  opacity: .7;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 .game-status {
+  text-align: center;
   visibility: hidden;
 }
 
+.game-status h2 {
+  color: rgb(200, 50, 50);
+  text-shadow: 0px 4px 2px 2px rgba(0,0,0,1);
+}
+
 button {
+  font-size: 20px;
   margin-top: 20px;
+  margin-right: 10px;
 }
 .new-game {
   visibility: hidden;
